# Life

./: CMakeLists.txt  github_settings.xml  print.xml  vcs.xml
src/: AsciiArt_writer.c  AsciiArt_writer.h  Formatted_writer.c  Formatted_writer.h  Generator.c  Generator.h  Grid.c  Grid.h  Main.c  Reader.c  Reader.h  Rules.c  Rules.h  makefile  test.txt
src/Generations/: gen0002.txt  gen0005.txt
test/: Generator_CreateGen_test.c  Generator_CreateGen_test.h  ReaderTest.c  Reader_test.c  Reader_test1.txt  Reader_test2.txt  Rules_Interpreter_test.c  Rules_Interpreter_test.h  makefile
